<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ch.bfh.unicert</groupId>
	<artifactId>maven-base-config</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<name>maven-base-config</name>
	<description>
		This is the maven base configuration for UniCert projects.
	</description>

	<organization>
		<name>Berner Fachhochschule / Engineering and Information Technology / RISIS / E-Voting Group</name>
		<url>http://e-voting.bfh.ch</url>
	</organization>

	<developers>
		
		<developer>
			<id>hnr1</id>
			<name>Rolf Haenni</name>
			<!-- <email><![CDATA[http://www.google.com/recaptcha/mailhide/d?k=015DwOEx8g5kLmbHmS51UU_g==&c=nHikvhFWZENReyZN3zPaXqczGDUaQFNTe-A_B5V-m1s=]]></email> -->
			<email>http://bit.ly/ZxrBoc</email>
			<url>https://prof.ti.bfh.ch/hnr1</url>
			<organization>Berner Fachhochschule / RISIS</organization>
			<organizationUrl>http://www.ti.bfh.ch/risis</organizationUrl>
			<roles>
				<role>project leader</role>
				<role>system designer</role>
				<role>security advisor</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		
		<developer>
			<id>hss3</id>
			<name>Severin Hauser</name>
			<!-- <email><![CDATA[http://www.google.com/recaptcha/mailhide/d?k=015DwOEx8g5kLmbHmS51UU_g==&c=IwzXjNSkKdFrv8qDgZ1QCmJ98_kPosSi8vSm8P_31LM=]]></email> -->
			<email>http://bit.ly/10rj1tL</email>
			<url>https://staff.ti.bfh.ch/hss3</url>
			<organization>Berner Fachhochschule / RISIS</organization>
			<organizationUrl>http://www.ti.bfh.ch/risis</organizationUrl>
			<roles>
				<role>project leader</role>
				<role>system designer</role>
				<role>software developer</role>
				<role>server administrator</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>vgp2</id>
			<name>Philémon von Bergen</name>
			<!-- <email><![CDATA[http://www.google.com/recaptcha/mailhide/d?k=015DwOEx8g5kLmbHmS51UU_g==&c=IwzXjNSkKdFrv8qDgZ1QCmJ98_kPosSi8vSm8P_31LM=]]></email> -->
			<email></email>
			<url>https://staff.ti.bfh.ch/vgp2</url>
			<organization>Berner Fachhochschule / RISIS</organization>
			<organizationUrl>http://www.ti.bfh.ch/risis</organizationUrl>
			<roles>
				<role>system designer</role>
				<role>software developer</role>
				<role>server administrator</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>
	<properties>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>org.jacoco.core</artifactId>
			<version>0.7.0.201403182114</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
						<!--
						<argLine>-Xms1024m -Xmx4096m -XX:MaxPermSize=500m ${argLine}</argLine>
						-->
						<argLine>-Xms1024m -Xmx4096m -XX:MaxPermSize=500m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.7.0.201403182114</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>2.17</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jxr-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>2.7.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>2.12</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ejb-plugin</artifactId>
					<version>2.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<configuration>
								<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
								<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
							</configuration>
							<reports>
								<report>dependencies</report>
								<report>project-team</report>
								<report>mailing-list</report>
								<report>cim</report>
								<report>issue-tracking</report>
								<report>license</report>
								<report>scm</report>
								<report>summary</report>
							</reports>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-report-plugin</artifactId>
							<reportSets>
								<reportSet>
									<reports>
										<report>report-only</report>
										<report>failsafe-report-only</report>
									</reports>
								</reportSet>
							</reportSets>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-jxr-plugin</artifactId>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-pmd-plugin</artifactId>
							<configuration>
								<linkXref>true</linkXref>
								<sourceEncoding>utf-8</sourceEncoding>
								<minimumTokens>100</minimumTokens>
								<targetJdk>1.7</targetJdk>
								<!-- Exclude generated code -->
								<excludes>
									<exclude>**/common/*.java</exclude>
									<exclude>**/generated/*.java</exclude>
								</excludes>
								<excludeRoots>
									<excludeRoot>target/generated-sources</excludeRoot>
								</excludeRoots>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-checkstyle-plugin</artifactId>
							<configuration>
								<configLocation>src/checkstyle/checkstyle-configuration.xml</configLocation>
								<headerLocation>src/checkstyle/checkstyle-header.txt</headerLocation>
							</configuration>
							<reportSets>
								<reportSet>
									<reports>
										<report>checkstyle</report>
									</reports>
								</reportSet>
							</reportSets>
						</plugin>
					</reportPlugins>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
